--- a/src/dubhacks1/NewJFrame.form
+++ b/src/dubhacks1/NewJFrame.form
@@ -1558,6 +1558,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="OK"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton21ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
