--- a/src/dubhacks1/NewJFrame.form
+++ b/src/dubhacks1/NewJFrame.form
@@ -2378,6 +2378,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Notification"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton47ActionPerformed"/>
+              </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                   <AbsoluteConstraints x="10" y="180" width="100" height="80"/>
